# pcone-crawler

./: README.md  main.py  project_structure  pyproject.toml
application/interfaces/: csv_writer.py  product_repository.py  shop_repository.py
application/use_cases/: scrape_products.py  search_products.py  search_shop.py
domain/entities/: product.py  shop.py
infrastructure/exporters/: csv_exporter.py
infrastructure/repositories/: web_product_repository.py  web_shop_repository.py
kubernetes/selenium/: dp.yaml  svc.yaml
utils/: dely.py
